<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_get_url_info"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/str_enter_the_code_for_info"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiTvInfoTitle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uiBtnGetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_get_info"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/uiEtEnterCode"
        app:layout_constraintStart_toStartOf="@id/uiEtEnterCode"
        app:layout_constraintEnd_toEndOf="@id/uiEtEnterCode"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_result_here"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/uiEtEnterCode"
        app:layout_constraintEnd_toEndOf="@id/uiEtEnterCode"
        app:layout_constraintTop_toBottomOf="@id/uiBtnGetInfo"
        />

    <ProgressBar
        android:id="@+id/uiProgressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminate="true"
        android:layout_margin="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>